packages/cli/tests/fixtures/errors/misconfigured/kbd/types.ts
import type { VariantProps } from "jade-garden";
import type { kbdStyles } from ".";

export type Variants = VariantProps<typeof kbdStyles>;
